--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,4 +1,4 @@
-name: fastphoto_gpu
+name: fastphoto_cpu
 channels:
   - menpo
   - glemaitre
@@ -19,4 +19,3 @@ dependencies:
   - pip:
     - scikit-umfpack
     - pynvrtc
-    - cupy
